# hw9

./: authorsHW.json  main0ne.py  pyproject.toml
examples_json/: model.py
